--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 </head>
 <body>
 <h1> This is the home page </h2>
-  <a href="first.html"> first page </a>
+  <a href="firstpage.html"> first page </a>
 </body>
 </html>
